# starry

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  make.sh
Dependencies/glad-build/: cmake_install.cmake
Dependencies/glad-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Dependencies/glad-subbuild/glad-populate-prefix/src/glad-populate-stamp/: glad-populate-gitclone-lastrun.txt  glad-populate-update-info.txt
Dependencies/glad-subbuild/glad-populate-prefix/tmp/: glad-populate-gitclone.cmake  glad-populate-gitupdate.cmake  glad-populate-mkdirs.cmake
Dependencies/glfw-build/: cmake_install.cmake
Dependencies/glfw-build/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
Dependencies/glfw-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Dependencies/glfw-subbuild/glfw-populate-prefix/src/glfw-populate-stamp/: glfw-populate-gitinfo.txt  glfw-populate-update-info.txt
Dependencies/glfw-subbuild/glfw-populate-prefix/tmp/: glfw-populate-gitclone.cmake  glfw-populate-gitupdate.cmake  glfw-populate-mkdirs.cmake
Dependencies/glm-build/: cmake_install.cmake
Dependencies/glm-build/glm/: cmake_install.cmake  glm.lib
Dependencies/glm-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Dependencies/glm-subbuild/glm-populate-prefix/src/glm-populate-stamp/: glm-populate-gitinfo.txt  glm-populate-update-info.txt
Dependencies/glm-subbuild/glm-populate-prefix/tmp/: glm-populate-gitclone.cmake  glm-populate-gitupdate.cmake  glm-populate-mkdirs.cmake
Editor/: CMakeLists.txt  clean.sh
Editor/include/: Application.h  FrameMetricDisplay.h
Editor/src/: Application.cpp  FrameMetricDisplay.cpp  main.cpp
Editor/src/shaders/: simple_shader.frag
Starry/: CMakeLists.txt  Starry.h  StarryConfig.cmake
Starry/Starry/int/glfw/: cmake_uninstall.cmake
Starry/include/: CameraObject.h  Interface.h  ManagedObject.h  MeshObject.h  RenderWindow.h  Renderer.h  Scene.h  SceneObject.h  Starry.h  Timer.h
Starry/include/starry/: Application.h  Asset.h  CameraObject.h  CoreDLL.h  Interface.h  ManagedObject.h  MeshObject.h  Renderer.h  Scene.h  SceneObject.h  Timer.h
Starry/s_manager/: CMakeLists.txt
Starry/s_manager/include/: StarryManager.h
Starry/s_manager/include/manager/: AssetManager.h  FileHandler.h  Logger.h  Resource.h  StarryAsset.h
Starry/s_manager/src/: AssetManager.cpp  FileHandler.cpp  Logger.cpp  Resource.cpp  StarryAsset.cpp
Starry/s_renderer/: CMakeLists.txt
Starry/s_renderer/include/: StarryRender.h
Starry/s_renderer/include/renderer/: Buffer.h  Canvas.h  Descriptor.h  Device.h  ImageBuffer.h  Pipeline.h  RenderContext.h  Shader.h  SwapChain.h  TextureImage.h  Uniform.h  Window.h
Starry/s_renderer/src/: Buffer.cpp  Canvas.cpp  Descriptor.cpp  Device.cpp  ImageBuffer.cpp  Pipeline.cpp  RenderContext.cpp  Shader.cpp  SwapChain.cpp  TextureImage.cpp  Uniform.cpp  Window.cpp
Starry/scripts/: clean.sh
Starry/src/: Application.cpp  CameraObject.cpp  ErrorHandler.cpp  Interface.cpp  MeshObject.cpp  RenderWindow.cpp  Renderer.cpp  Scene.cpp  SceneObject.cpp  StarryAsset.cpp  Timer.cpp
Starry/src/models/: PortalRadio.mtl
Starry/src/shaders/: simple_shader.frag  simple_shader.vert
StarryApp/: CMakeLists.txt
StarryApp/include/: Scene.h  Window.h
StarryApp/src/: Application.cpp
StarryApp/src/headers/: Application.h  Renderer.h
StarryAsset/: CMakeLists.txt
StarryAsset/include/: StarryAsset.h
StarryAsset/include/starryasset/: AssetManager.h  Logger.h  StarryAsset.h
StarryAsset/src/: AssetManager.cpp  Logger.cpp  ResourceRequest.cpp  StarryAsset.cpp
StarryEditor/: CMakeLists.txt
StarryLog/: CMakeLists.txt
StarryLog/include/: StarryLog.h
StarryLog/include/starrylog/: Asset.h  AssetManager.h  Logger.h  StarryAsset.h
StarryLog/src/: AssetManager.cpp  Logger.cpp  ResourceRequest.cpp  StarryAsset.cpp
StarryManager/: CMakeLists.txt  StarryManager.h
StarryManager/include/: AssetManager.h  FileHandler.h  Logger.h  Resource.h  StarryAsset.h  StarryManager.h
StarryManager/include/starrymanager/: AssetManager.h  FileHandler.h  Logger.h  Resource.h  StarryAsset.h
StarryManager/src/: AssetManager.cpp  FileHandler.cpp  Logger.cpp  Resource.cpp  ResourceRequest.cpp  StarryAsset.cpp
StarryRender/: CMakeLists.txt  StarryRender.h
StarryRender/include/: Canvas.h  Descriptor.h  Device.h  Hello.h  ImageBuffer.h  Pipeline.h  RenderContext.h  RenderPipeline.h  Shader.h  StarryRender.h  SwapChain.h  TextureImage.h  UniformBuffer.h  VertexBuffer.h  Window.h
StarryRender/include/starryrender/: Application.h  Asset.h  Buffer.h  CameraObject.h  Descriptor.h  ImageBuffer.h  ImageTexture.h  MeshObject.h  RenderContext.h  RenderDevice.h  RenderPipeline.h  Renderer.h  Scene.h  Shader.h  StarryPrefab.h  SwapChain.h  TextureImage.h  Timer.h  UniformBuffer.h  VertexBuffer.h  Window.h
StarryRender/old/: Asset.h  Buffer.cpp  Canvas.cpp  Device.cpp  Device.h  ErrorHandler.cpp  RenderAsset.cpp  RenderContext.cpp
StarryRender/shaders/: compile.bat  simple_shader.frag
StarryRender/src/: Application.cpp  Buffer.cpp  CameraObject.cpp  Canvas.cpp  Descriptor.cpp  Device.cpp  ErrorHandler.cpp  Hello.cpp  ImageBuffer.cpp  ImageTexture.cpp  MeshObject.cpp  Pipeline.cpp  RenderAsset.cpp  RenderContext.cpp  RenderDevice.cpp  RenderPipeline.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SwapChain.cpp  TextureImage.cpp  Timer.cpp  UniformBuffer.cpp  VertexBuffer.cpp  Window.cpp
include/: Application.h  FrameMetricDisplay.h  Interface.h
scripts/: clean.sh  make.sh
src/: Application.cpp  FrameMetricDisplay.cpp  Interface.cpp  StarryApplication.cpp  StarryApplication.h  main.cpp
src/shaders/: simple_shader.frag
